force-app/main/default/objects/Interview_Answer__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not evaluated</fullName>
            </value>
            <value>
                <fullName>None – 0</fullName>
            </value>
            <value>
                <fullName>Beginner - 1</fullName>
            </value>
            <value>
                <fullName>Good - 2</fullName>
            </value>
            <value>
                <fullName>Strong - 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>