force-app/main/default/objects/Interview_Answer__c/fields/Interview_Summary__c.field-meta.xml
<CustomField>
    <fullName>Interview_Summary__c</fullName>
    <label>Interview Summary</label>
    <referenceTo>Interview_Summary__c</referenceTo>
    <relationshipLabel>Interview Answers</relationshipLabel>
    <relationshipName>Interview_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>