force-app/main/default/objects/Interview_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All Answers</label>
</ListView>